# GammaAttenuation

./: .gitignore  CMakeLists.txt  README.md  main.cc
analysis/: Multi_energy_analysis.C  Multi_thickness_analysis.C  Plot_multi_energy.py  Plot_multi_thickness.py  README.md  multi_energy_analysis.C  multi_energy_bone_analysis.C  multi_energy_concrete_analysis.C  multi_energy_lead_analysis.C  multi_energy_muscle_analysis.C  multi_energy_polyethylene_analysis.C  multi_material_analysis.C  multi_thickness_analysis.C  multi_thickness_bone_analysis.C  multi_thickness_concrete_analysis.C  multi_thickness_lead_analysis.C  multi_thickness_muscle_analysis.C  plot_all_materials_thickness.py  plot_multi_energy.py  plot_multi_energy_bone.py  plot_multi_energy_concrete.py  plot_multi_energy_lead.py  plot_multi_energy_muscle.py  plot_multi_energy_polyethylene.py  plot_multi_material.py  plot_multi_thickness.py  plot_multi_thickness_bone.py  plot_multi_thickness_concrete.py  plot_multi_thickness_lead.py  plot_multi_thickness_muscle.py
include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  MiHit.hh  MiSensitiveDetector.hh  PhysicsList.hh  PrimaryGenerator.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SensitiveDetector.hh
mac/: air_test.mac  init.mac  material_bone_5.0cm.mac  material_muscle_5.0cm.mac  material_water_5.0cm.mac  realistic_test.mac  run_no_visc.mac  temp_bone.mac  temp_concrete.mac  temp_lead.mac  temp_muscle.mac  temp_water.mac  thickness_bone_0.5.mac  thickness_bone_1.0.mac  thickness_bone_10.0.mac  thickness_bone_15.0.mac  thickness_bone_2.0.mac  thickness_bone_3.0.mac  thickness_bone_5.0.mac  thickness_bone_7.5.mac  thickness_muscle_0.5.mac  thickness_muscle_1.0.mac  thickness_muscle_10.0.mac  thickness_muscle_15.0.mac  thickness_muscle_2.0.mac  thickness_muscle_3.0.mac  thickness_muscle_5.0.mac  thickness_muscle_7.5.mac  thickness_water_0.5.mac  thickness_water_1.0.mac  thickness_water_10.0.mac  thickness_water_15.0.mac  thickness_water_2.0.mac  thickness_water_3.0.mac  thickness_water_5.0.mac  thickness_water_7.5.mac  thin_test.mac
macros/: init.mac  init_vis.mac  run.mac  show_particles.mac  vis.mac
scripts/: Run_multi_energy.sh  Run_multi_thickness.sh  run_multi_energy.sh  run_multi_energy_bone.sh  run_multi_energy_muscle.sh  run_multi_material.sh  run_multi_thickness.sh  run_multi_thickness_bone.sh  run_multi_thickness_muscle.sh
src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  MiHit.cc  MiSensitiveDetector.cc  PhysicsList.cc  PhysicsListExtended.cc  PrimaryGenerator.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SensitiveDetector.cc  main.cc
